[build-system]
requires = ["setuptools>=42.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "h5grove"
version = "2.3.0"
authors = [{ name = "ESRF", email = "h5web@esrf.fr" }]
description = "Core utilities to serve HDF5 file contents"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3"]
requires-python = ">=3.10"
dependencies = ["numpy", "orjson", "h5py >= 3", "tifffile", "typing-extensions"]

[project.urls]
Homepage = "https://github.com/silx-kit/h5grove"
Documentation = "https://silx-kit.github.io/h5grove/"
Repository = "https://github.com/silx-kit/h5grove"
Issues = "https://github.com/silx-kit/h5grove/issues"
Changelog = "https://github.com/silx-kit/h5grove/releases"

[project.optional-dependencies]
fastapi = ["fastapi", "pydantic > 2", "pydantic-settings", "uvicorn"]
flask = ["Flask", "Flask-Compress", "Flask-Cors"]
tornado = ["tornado"]
dev = [
    "bandit",
    "black",
    "bump2version",
    "check-manifest",
    "flake8",
    "h5grove[fastapi]",
    "h5grove[flask]",
    "h5grove[tornado]",
    "invoke",
    "mypy",
    "myst-parser",
    "httpx >= 0.23",
    "pytest",
    "pytest-benchmark",
    "pytest-cov",
    "pytest-tornado",
    "sphinx",
    "sphinx-argparse",
    "sphinx-autobuild",
    "types-contextvars",
    "types-dataclasses",
    "types-orjson",
    "types-setuptools",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--benchmark-columns=median,iqr,min,max --benchmark-group-by=param:h5path --cov=src/h5grove"
testpaths = ["src/tests"]

[tool.mypy]
python_version = "3.10"

[[tool.mypy.overrides]]
module = ["h5py.*", "hdf5plugin", "tifffile"]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["src/tests"]
