[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "h5grove"
version = "3.0.0rc1"
authors = [{ name = "ESRF", email = "h5web@esrf.fr" }]
description = "Core utilities to serve HDF5 file contents"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3"]
requires-python = ">=3.10"
dependencies = ["numpy", "orjson", "h5py >= 3", "tifffile", "typing-extensions"]

[project.urls]
Homepage = "https://github.com/silx-kit/h5grove"
Documentation = "https://silx-kit.github.io/h5grove/"
Repository = "https://github.com/silx-kit/h5grove"
Issues = "https://github.com/silx-kit/h5grove/issues"
Changelog = "https://github.com/silx-kit/h5grove/releases"

[project.optional-dependencies]
fastapi = ["fastapi", "pydantic > 2", "pydantic-settings", "uvicorn"]
flask = ["Flask", "Flask-Compress", "Flask-Cors"]
tornado = ["tornado"]
dev = [
    "bump2version",
    "hatch",
    "h5grove[fastapi]",
    "h5grove[flask]",
    "h5grove[tornado]",
    "mypy",
    "myst-parser",
    "httpx >= 0.23",
    "pytest",
    "pytest-benchmark",
    "pytest-cov",
    "pytest-tornado",
    "ruff",
    "setuptools<82",     # pytest-tornado still need pkg_resources (https://github.com/eugeniy/pytest-tornado/issues/67)
    "sphinx",
    "sphinx-argparse",
    "sphinx-autobuild",
    "types-contextvars",
    "types-dataclasses",
    "types-orjson",
    "types-setuptools",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--benchmark-columns=median,iqr,min,max --benchmark-group-by=param:h5path --cov=src/h5grove"
testpaths = ["src/tests"]

[tool.mypy]
python_version = "3.10"

[[tool.mypy.overrides]]
module = ["h5py.*", "hdf5plugin", "tifffile"]
ignore_missing_imports = true

[tool.ruff.lint]
select = ["E", "F", "I", "S"]
ignore = ["E203", "E501", "E701"]

[tool.ruff.lint.per-file-ignores]
# Ignore `S` violations in all test files
"src/tests/*.py" = ["S"]
# Ignore `F401` (imported but unused) in init files
"__init__.py" = ["F401"]


[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.envs.default.scripts]
benchmark = "pytest --benchmark-only"
test = 'pytest --benchmark-skip {args}'
ruff_format = "ruff format --check src/ example/"
ruff_check = 'ruff check'
lint_mypy = 'mypy src/ example/'
lint = ['ruff_format', 'ruff_check', 'lint_mypy']
docbuild = "sphinx-build -W -b html docs _build"
doc = "sphinx-autobuild -W -b html docs _build"

[tool.hatch.build.targets.sdist]
include = ["src/h5grove"]

[tool.hatch.build.targets.wheel]
packages = ["src/h5grove"]
