[metadata]
name = h5core
version = file: h5core/VERSION
author = ESRF
author_email = loic.huder@esrf.fr
description = Core utilities to serve HDF5 file contents
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/silx-kit/h5core
project_urls = 
	Bug Tracker = https://github.com/silx-kit/h5core/-/issues
classifiers = 
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.6
install_requires = 
	bson
	numpy
	orjson
    h5py

[options.extras_require]
dev = 
	black
	flake8
tornado =
    tornado
flask =
	Flask
	Flask-Compress
	Flask-Cors

# E501 (line too long) ignored for now
# E203 and W503 incompatible with black formatting (https://black.readthedocs.io/en/stable/compatible_configs.html#flake8)
[flake8]
ignore = E501, E203, W503
max-line-length = 88
