[metadata]
name = h5grove
version = attr: h5grove.version
author = European Synchrotron Radiation Facility
author_email = h5web@esrf.fr
description = Core utilities to serve HDF5 file contents
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://github.com/silx-kit/h5grove
project_urls = 
	Bug Tracker = https://github.com/silx-kit/h5grove/-/issues
classifiers = 
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.6
install_requires = 
	numpy
	orjson
    h5py

[options.extras_require]
dev = 
	black
	bump2version
	flake8
	mypy
	myst-parser
	pytest
	pytest-benchmark
	pytest-cov
	pytest-tornado
	sphinx
	types-contextvars
	types-dataclasses
	types-orjson
	types-pkg-resources
flask =
	Flask
	Flask-Compress
	Flask-Cors
tornado =
    tornado
all = 
	black
	bump2version
	flake8
	Flask
	Flask-Compress
	Flask-Cors
	mypy
	myst-parser
	pytest
	pytest-benchmark
	pytest-cov
	pytest-tornado
	sphinx
	tornado
	types-contextvars
	types-dataclasses
	types-orjson
	types-pkg-resources

# E501 (line too long) ignored for now
# E203 and W503 incompatible with black formatting (https://black.readthedocs.io/en/stable/compatible_configs.html#flake8)
[flake8]
ignore = E501, E203, W503
max-line-length = 88
per-file-ignores =
    # imported but unused
    __init__.py: F401

[mypy]
python_version = 3.6

[mypy-h5py.*]
ignore_missing_imports = True

[mypy-hdf5plugin.*]
ignore_missing_imports = True

# Numpy types are only available on >=1.20
[mypy-numpy.*]
ignore_missing_imports = True
